refactored and abstracted separation of concern
